--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-authors = ["Martin Amps <https://twitter.com/martinamps>"]
-name = "starter-snake-rust"
+authors = ["Misha Hawthorn"]
+name = "battlesnake-rusty"
 version = "1.0.0"
-edition = "2018"
+edition = "2021"
 
 homepage = "https://play.battlesnake.com"
-repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"
+repository = "https://github.com/mishagp/battlesnake-rusty/"
 
 readme = "README.md"
 keywords = ["battlesnake"]
 description = """
-A simple Battlesnake written in Rust
+A beginner Battlesnake written in Rust
 """
 
 [dependencies]
